force-app/main/default/objects/Quote_PE__e/Quote_PE__e.object-meta.xml
<CustomObject>
    <description>Integration SF -&gt; GRACE
ZRD
SF-762</description>
    <label>Quote PE</label>
    <pluralLabel>Quote PEs</pluralLabel>
</CustomObject>