force-app/main/default/objects/Quote_PE__e/fields/Account_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Number__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Account Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>