force-app/main/default/objects/Quote_PE__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>