force-app/main/default/objects/Quote_PE__e/fields/Exact_Source__c.field-meta.xml
<CustomField>
    <fullName>Exact_Source__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Exact Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>