force-app/main/default/objects/Quote_PE__e/fields/Opportunity_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_PostalCode__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Opportunity_PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>