force-app/main/default/objects/Quote_PE__e/fields/Opportunity_Street__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Street__c</fullName>
    <label>Opportunity_Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>