force-app/main/default/objects/Quote_PE__e/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>