force-app/main/default/objects/Quote_PE__e/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>