force-app/main/default/objects/Quote_PE__e/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-762</description>
    <label>Transaction Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>