force-app/main/default/objects/Quote_PE__e/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-1286</description>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>